@@ -1,10 +1,3 @@
-2007-10-17  Nathan Froyd  <froydnj@codesourcery.com>
-
-	* dwarf2out.c (gen_subprogram_die): Don't remove attributes and
-	formal parameters if we are generating LTO objects, as the formal
-	parameters likely have references to them from elsewhere.
-	Instead, return early if we find a DIE for this decl.
-
 2007-09-02  Kenneth Zadeck <zadeck@naturalbridge.com>
 
 	* ra-conflict.c: New file.
